examples/errors/name-clash.gr
import StdLib/Prelude

map : Int
map = 0

id : Int
id = 0

onlyDefinedHere : Bool
onlyDefinedHere = True

onlyDefinedHere : Bool
onlyDefinedHere = True
